// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KebabToggle basic 1`] = `
.pf-c-dropdown__toggle {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  min-width: 44px;
  max-width: 100%;
  padding: 0.375rem 0.5rem 0.375rem 0.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  background-color: transparent;
}
.pf-c-dropdown__menu {
  display: block;
  position: absolute;
  z-index: 100;
  min-width: 100%;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background: #ffffff;
  background-clip: padding-box;
  border: 1px solid transparent;
  box-shadow: 0 0.0625rem 0.0625rem 0rem rgba(3, 3, 3, 0.05), 0 0.25rem 0.5rem 0.25rem rgba(3, 3, 3, 0.06);
}
.pf-c-dropdown.pf-m-expanded {
  display: inline-block;
  position: relative;
  max-width: 100%;
}

<Dropdown
  className=""
  direction="down"
  dropdownItems={Array []}
  isOpen={true}
  isPlain={false}
  onSelect={[Function]}
  position="left"
  toggle={
    <Kebab
      aria-label="Actions"
      className=""
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      onToggle={[Function]}
      parentRef={null}
    />
  }
>
  <div
    className="pf-c-dropdown pf-m-expanded"
  >
    <Kebab
      aria-label="Actions"
      className=""
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={true}
      isPlain={false}
      key=".0"
      onToggle={[Function]}
      parentRef={null}
    >
      <DropdownToggle
        aria-label="Actions"
        className=""
        id="Dropdown Toggle"
        isActive={false}
        isFocused={false}
        isHovered={false}
        isOpen={true}
        isPlain={false}
        onToggle={[Function]}
        parentRef={null}
      >
        <button
          aria-expanded={true}
          aria-label="Actions"
          className="pf-c-dropdown__toggle"
          id="Dropdown Toggle"
          onClick={[Function]}
          type="button"
        >
          <EllipsisVIcon
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 192 512"
              width="1em"
            >
              <path
                d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                transform=""
              />
            </svg>
          </EllipsisVIcon>
        </button>
      </DropdownToggle>
    </Kebab>
    <DropdownMenu
      aria-labelledby="Dropdown Toggle"
      className=""
      component="div"
      isOpen={true}
      position="left"
    >
      <div
        aria-labelledby="Dropdown Toggle"
        className="pf-c-dropdown__menu"
        hidden={false}
        onClick={[Function]}
      >
        BASIC
      </div>
    </DropdownMenu>
  </div>
</Dropdown>
`;

exports[`KebabToggle dropup + right aligned 1`] = `
.pf-c-dropdown__toggle {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  min-width: 44px;
  max-width: 100%;
  padding: 0.375rem 0.5rem 0.375rem 0.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  background-color: transparent;
}
.pf-c-dropdown.pf-m-top {
  display: inline-block;
  position: relative;
  max-width: 100%;
}

<Dropdown
  className=""
  direction="up"
  dropdownItems={
    Array [
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Action
      </DropdownItem>,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Action
      </DropdownItem>,
      <Separator
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
      />,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Action
      </DropdownItem>,
    ]
  }
  isOpen={false}
  isPlain={false}
  onSelect={[Function]}
  position="right"
  toggle={
    <Kebab
      aria-label="Actions"
      className=""
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      onToggle={[Function]}
      parentRef={null}
    />
  }
>
  <div
    className="pf-c-dropdown pf-m-top"
  >
    <Kebab
      aria-label="Actions"
      className=""
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      key=".0"
      onToggle={[Function]}
      parentRef={null}
    >
      <DropdownToggle
        aria-label="Actions"
        className=""
        id="Dropdown Toggle"
        isActive={false}
        isFocused={false}
        isHovered={false}
        isOpen={false}
        isPlain={false}
        onToggle={[Function]}
        parentRef={null}
      >
        <button
          aria-expanded={false}
          aria-label="Actions"
          className="pf-c-dropdown__toggle"
          id="Dropdown Toggle"
          onClick={[Function]}
          type="button"
        >
          <EllipsisVIcon
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 192 512"
              width="1em"
            >
              <path
                d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                transform=""
              />
            </svg>
          </EllipsisVIcon>
        </button>
      </DropdownToggle>
    </Kebab>
  </div>
</Dropdown>
`;

exports[`KebabToggle dropup 1`] = `
.pf-c-dropdown__toggle {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  min-width: 44px;
  max-width: 100%;
  padding: 0.375rem 0.5rem 0.375rem 0.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  background-color: transparent;
}
.pf-c-dropdown.pf-m-top {
  display: inline-block;
  position: relative;
  max-width: 100%;
}

<Dropdown
  className=""
  direction="up"
  dropdownItems={
    Array [
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Action
      </DropdownItem>,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Action
      </DropdownItem>,
      <Separator
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
      />,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Action
      </DropdownItem>,
    ]
  }
  isOpen={false}
  isPlain={false}
  onSelect={[Function]}
  position="left"
  toggle={
    <Kebab
      aria-label="Actions"
      className=""
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      onToggle={[Function]}
      parentRef={null}
    />
  }
>
  <div
    className="pf-c-dropdown pf-m-top"
  >
    <Kebab
      aria-label="Actions"
      className=""
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      key=".0"
      onToggle={[Function]}
      parentRef={null}
    >
      <DropdownToggle
        aria-label="Actions"
        className=""
        id="Dropdown Toggle"
        isActive={false}
        isFocused={false}
        isHovered={false}
        isOpen={false}
        isPlain={false}
        onToggle={[Function]}
        parentRef={null}
      >
        <button
          aria-expanded={false}
          aria-label="Actions"
          className="pf-c-dropdown__toggle"
          id="Dropdown Toggle"
          onClick={[Function]}
          type="button"
        >
          <EllipsisVIcon
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 192 512"
              width="1em"
            >
              <path
                d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                transform=""
              />
            </svg>
          </EllipsisVIcon>
        </button>
      </DropdownToggle>
    </Kebab>
  </div>
</Dropdown>
`;

exports[`KebabToggle expanded 1`] = `
.pf-c-dropdown__toggle {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  min-width: 44px;
  max-width: 100%;
  padding: 0.375rem 0.5rem 0.375rem 0.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  background-color: transparent;
}
.pf-m-disabled {
  display: block;
}
.pf-m-disabled {
  display: block;
}
.pf-c-dropdown__separator {
  display: block;
  height: 1px;
  background-color: #ededed;
}
.pf-c-dropdown__separator {
  display: block;
  height: 1px;
  background-color: #ededed;
}
.pf-c-dropdown__menu {
  display: block;
  position: absolute;
  z-index: 100;
  min-width: 100%;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background: #ffffff;
  background-clip: padding-box;
  border: 1px solid transparent;
  box-shadow: 0 0.0625rem 0.0625rem 0rem rgba(3, 3, 3, 0.05), 0 0.25rem 0.5rem 0.25rem rgba(3, 3, 3, 0.06);
}
.pf-c-dropdown.pf-m-expanded {
  display: inline-block;
  position: relative;
  max-width: 100%;
}

<Dropdown
  className=""
  direction="down"
  dropdownItems={
    Array [
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Action
      </DropdownItem>,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Action
      </DropdownItem>,
      <Separator
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
      />,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Action
      </DropdownItem>,
    ]
  }
  isOpen={true}
  isPlain={false}
  onSelect={[Function]}
  position="left"
  toggle={
    <Kebab
      aria-label="Actions"
      className=""
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      onToggle={[Function]}
      parentRef={null}
    />
  }
>
  <div
    className="pf-c-dropdown pf-m-expanded"
  >
    <Kebab
      aria-label="Actions"
      className=""
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={true}
      isPlain={false}
      key=".0"
      onToggle={[Function]}
      parentRef={null}
    >
      <DropdownToggle
        aria-label="Actions"
        className=""
        id="Dropdown Toggle"
        isActive={false}
        isFocused={false}
        isHovered={false}
        isOpen={true}
        isPlain={false}
        onToggle={[Function]}
        parentRef={null}
      >
        <button
          aria-expanded={true}
          aria-label="Actions"
          className="pf-c-dropdown__toggle"
          id="Dropdown Toggle"
          onClick={[Function]}
          type="button"
        >
          <EllipsisVIcon
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 192 512"
              width="1em"
            >
              <path
                d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                transform=""
              />
            </svg>
          </EllipsisVIcon>
        </button>
      </DropdownToggle>
    </Kebab>
    <DropdownMenu
      aria-labelledby="Dropdown Toggle"
      className=""
      component="ul"
      isOpen={true}
      position="left"
    >
      <FocusTrap
        _createFocusTrap={[Function]}
        active={true}
        focusTrapOptions={
          Object {
            "clickOutsideDeactivates": true,
          }
        }
        paused={false}
        tag="div"
      >
        <div>
          <ul
            aria-labelledby="Dropdown Toggle"
            className="pf-c-dropdown__menu"
            hidden={false}
          >
            <DropdownItem
              className=""
              component="a"
              href="#"
              isDisabled={false}
              isHovered={false}
              key="link"
              onClick={[Function]}
            >
              <li>
                <a
                  aria-disabled={false}
                  className=""
                  href="#"
                  onClick={[Function]}
                >
                  Link
                </a>
              </li>
            </DropdownItem>
            <DropdownItem
              className=""
              component="button"
              href="#"
              isDisabled={false}
              isHovered={false}
              key="action"
              onClick={[Function]}
            >
              <li>
                <button
                  className=""
                  disabled={false}
                  href="#"
                  onClick={[Function]}
                >
                  Action
                </button>
              </li>
            </DropdownItem>
            <DropdownItem
              className=""
              component="a"
              href="#"
              isDisabled={true}
              isHovered={false}
              key="disabled link"
              onClick={[Function]}
            >
              <li>
                <a
                  aria-disabled={true}
                  className="pf-m-disabled"
                  href="#"
                  onClick={[Function]}
                  tabIndex={-1}
                >
                  Disabled Link
                </a>
              </li>
            </DropdownItem>
            <DropdownItem
              className=""
              component="button"
              href="#"
              isDisabled={true}
              isHovered={false}
              key="disabled action"
              onClick={[Function]}
            >
              <li>
                <button
                  className="pf-m-disabled"
                  disabled={true}
                  href="#"
                  onClick={[Function]}
                >
                  Disabled Action
                </button>
              </li>
            </DropdownItem>
            <Separator
              className=""
              component="a"
              href="#"
              isDisabled={false}
              isHovered={false}
              key="separator"
            >
              <DropdownItem
                className="pf-c-dropdown__separator"
                component="div"
                href="#"
                isDisabled={false}
                isHovered={false}
                onClick={[Function]}
                role="separator"
              >
                <li>
                  <div
                    className="pf-c-dropdown__separator"
                    href="#"
                    onClick={[Function]}
                    role="separator"
                  />
                </li>
              </DropdownItem>
            </Separator>
            <DropdownItem
              className=""
              component="a"
              href="#"
              isDisabled={false}
              isHovered={false}
              key="separated link"
              onClick={[Function]}
            >
              <li>
                <a
                  aria-disabled={false}
                  className=""
                  href="#"
                  onClick={[Function]}
                >
                  Separated Link
                </a>
              </li>
            </DropdownItem>
            <DropdownItem
              className=""
              component="button"
              href="#"
              isDisabled={false}
              isHovered={false}
              key="separated action"
              onClick={[Function]}
            >
              <li>
                <button
                  className=""
                  disabled={false}
                  href="#"
                  onClick={[Function]}
                >
                  Separated Action
                </button>
              </li>
            </DropdownItem>
          </ul>
        </div>
      </FocusTrap>
    </DropdownMenu>
  </div>
</Dropdown>
`;

exports[`KebabToggle plain 1`] = `
.pf-c-dropdown__toggle.pf-m-plain {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  min-width: 44px;
  max-width: 100%;
  padding: 0.375rem 0.5rem 0.375rem 0.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  background-color: transparent;
}
.pf-c-dropdown {
  display: inline-block;
  position: relative;
  max-width: 100%;
}

<Dropdown
  className=""
  direction="down"
  dropdownItems={
    Array [
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Action
      </DropdownItem>,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Action
      </DropdownItem>,
      <Separator
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
      />,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Action
      </DropdownItem>,
    ]
  }
  isOpen={false}
  isPlain={true}
  onSelect={[Function]}
  position="left"
  toggle={
    <Kebab
      aria-label="Actions"
      className=""
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      onToggle={[Function]}
      parentRef={null}
    />
  }
>
  <div
    className="pf-c-dropdown"
  >
    <Kebab
      aria-label="Actions"
      className=""
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={true}
      key=".0"
      onToggle={[Function]}
      parentRef={null}
    >
      <DropdownToggle
        aria-label="Actions"
        className=""
        id="Dropdown Toggle"
        isActive={false}
        isFocused={false}
        isHovered={false}
        isOpen={false}
        isPlain={true}
        onToggle={[Function]}
        parentRef={null}
      >
        <button
          aria-expanded={false}
          aria-label="Actions"
          className="pf-c-dropdown__toggle pf-m-plain"
          id="Dropdown Toggle"
          onClick={[Function]}
          type="button"
        >
          <EllipsisVIcon
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 192 512"
              width="1em"
            >
              <path
                d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                transform=""
              />
            </svg>
          </EllipsisVIcon>
        </button>
      </DropdownToggle>
    </Kebab>
  </div>
</Dropdown>
`;

exports[`KebabToggle regular 1`] = `
.pf-c-dropdown__toggle {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  min-width: 44px;
  max-width: 100%;
  padding: 0.375rem 0.5rem 0.375rem 0.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  background-color: transparent;
}
.pf-c-dropdown {
  display: inline-block;
  position: relative;
  max-width: 100%;
}

<Dropdown
  className=""
  direction="down"
  dropdownItems={
    Array [
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Action
      </DropdownItem>,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Action
      </DropdownItem>,
      <Separator
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
      />,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Action
      </DropdownItem>,
    ]
  }
  isOpen={false}
  isPlain={false}
  onSelect={[Function]}
  position="left"
  toggle={
    <Kebab
      aria-label="Actions"
      className=""
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      onToggle={[Function]}
      parentRef={null}
    />
  }
>
  <div
    className="pf-c-dropdown"
  >
    <Kebab
      aria-label="Actions"
      className=""
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      key=".0"
      onToggle={[Function]}
      parentRef={null}
    >
      <DropdownToggle
        aria-label="Actions"
        className=""
        id="Dropdown Toggle"
        isActive={false}
        isFocused={false}
        isHovered={false}
        isOpen={false}
        isPlain={false}
        onToggle={[Function]}
        parentRef={null}
      >
        <button
          aria-expanded={false}
          aria-label="Actions"
          className="pf-c-dropdown__toggle"
          id="Dropdown Toggle"
          onClick={[Function]}
          type="button"
        >
          <EllipsisVIcon
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 192 512"
              width="1em"
            >
              <path
                d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                transform=""
              />
            </svg>
          </EllipsisVIcon>
        </button>
      </DropdownToggle>
    </Kebab>
  </div>
</Dropdown>
`;

exports[`KebabToggle right aligned 1`] = `
.pf-c-dropdown__toggle {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  min-width: 44px;
  max-width: 100%;
  padding: 0.375rem 0.5rem 0.375rem 0.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  background-color: transparent;
}
.pf-c-dropdown {
  display: inline-block;
  position: relative;
  max-width: 100%;
}

<Dropdown
  className=""
  direction="down"
  dropdownItems={
    Array [
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Action
      </DropdownItem>,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Action
      </DropdownItem>,
      <Separator
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
      />,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Action
      </DropdownItem>,
    ]
  }
  isOpen={false}
  isPlain={false}
  onSelect={[Function]}
  position="right"
  toggle={
    <Kebab
      aria-label="Actions"
      className=""
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      onToggle={[Function]}
      parentRef={null}
    />
  }
>
  <div
    className="pf-c-dropdown"
  >
    <Kebab
      aria-label="Actions"
      className=""
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      key=".0"
      onToggle={[Function]}
      parentRef={null}
    >
      <DropdownToggle
        aria-label="Actions"
        className=""
        id="Dropdown Toggle"
        isActive={false}
        isFocused={false}
        isHovered={false}
        isOpen={false}
        isPlain={false}
        onToggle={[Function]}
        parentRef={null}
      >
        <button
          aria-expanded={false}
          aria-label="Actions"
          className="pf-c-dropdown__toggle"
          id="Dropdown Toggle"
          onClick={[Function]}
          type="button"
        >
          <EllipsisVIcon
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 192 512"
              width="1em"
            >
              <path
                d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                transform=""
              />
            </svg>
          </EllipsisVIcon>
        </button>
      </DropdownToggle>
    </Kebab>
  </div>
</Dropdown>
`;

exports[`dropdown basic 1`] = `
.pf-c-dropdown__toggle-icon {
  display: block;
}
.pf-c-dropdown__toggle-icon {
  display: block;
}
.pf-c-dropdown__toggle {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  min-width: 44px;
  max-width: 100%;
  padding: 0.375rem 0.5rem 0.375rem 0.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  background-color: transparent;
}
.pf-c-dropdown__menu {
  display: block;
  position: absolute;
  z-index: 100;
  min-width: 100%;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background: #ffffff;
  background-clip: padding-box;
  border: 1px solid transparent;
  box-shadow: 0 0.0625rem 0.0625rem 0rem rgba(3, 3, 3, 0.05), 0 0.25rem 0.5rem 0.25rem rgba(3, 3, 3, 0.06);
}
.pf-c-dropdown.pf-m-expanded {
  display: inline-block;
  position: relative;
  max-width: 100%;
}

<Dropdown
  className=""
  direction="down"
  dropdownItems={Array []}
  isOpen={true}
  isPlain={false}
  onSelect={[Function]}
  position="left"
  toggle={
    <DropdownToggle
      className=""
      iconComponent={[Function]}
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      onToggle={[Function]}
      parentRef={null}
    >
      Dropdown
    </DropdownToggle>
  }
>
  <div
    className="pf-c-dropdown pf-m-expanded"
  >
    <DropdownToggle
      className=""
      iconComponent={[Function]}
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={true}
      isPlain={false}
      key=".0"
      onToggle={[Function]}
      parentRef={null}
    >
      <DropdownToggle
        className=""
        id="Dropdown Toggle"
        isActive={false}
        isFocused={false}
        isHovered={false}
        isOpen={true}
        isPlain={false}
        onToggle={[Function]}
        parentRef={null}
      >
        <button
          aria-expanded={true}
          className="pf-c-dropdown__toggle"
          id="Dropdown Toggle"
          onClick={[Function]}
          type="button"
        >
          Dropdown
          <CaretDownIcon
            className="pf-c-dropdown__toggle-icon"
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              className="pf-c-dropdown__toggle-icon"
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                transform=""
              />
            </svg>
          </CaretDownIcon>
        </button>
      </DropdownToggle>
    </DropdownToggle>
    <DropdownMenu
      aria-labelledby="Dropdown Toggle"
      className=""
      component="div"
      isOpen={true}
      position="left"
    >
      <div
        aria-labelledby="Dropdown Toggle"
        className="pf-c-dropdown__menu"
        hidden={false}
        onClick={[Function]}
      >
        BASIC
      </div>
    </DropdownMenu>
  </div>
</Dropdown>
`;

exports[`dropdown dropup + right aligned 1`] = `
.pf-c-dropdown__toggle-icon {
  display: block;
}
.pf-c-dropdown__toggle-icon {
  display: block;
}
.pf-c-dropdown__toggle {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  min-width: 44px;
  max-width: 100%;
  padding: 0.375rem 0.5rem 0.375rem 0.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  background-color: transparent;
}
.pf-c-dropdown.pf-m-top {
  display: inline-block;
  position: relative;
  max-width: 100%;
}

<Dropdown
  className=""
  direction="up"
  dropdownItems={
    Array [
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Action
      </DropdownItem>,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Action
      </DropdownItem>,
      <Separator
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
      />,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Action
      </DropdownItem>,
    ]
  }
  isOpen={false}
  isPlain={false}
  onSelect={[Function]}
  position="right"
  toggle={
    <DropdownToggle
      className=""
      iconComponent={[Function]}
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      onToggle={[Function]}
      parentRef={null}
    >
      Dropdown
    </DropdownToggle>
  }
>
  <div
    className="pf-c-dropdown pf-m-top"
  >
    <DropdownToggle
      className=""
      iconComponent={[Function]}
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      key=".0"
      onToggle={[Function]}
      parentRef={null}
    >
      <DropdownToggle
        className=""
        id="Dropdown Toggle"
        isActive={false}
        isFocused={false}
        isHovered={false}
        isOpen={false}
        isPlain={false}
        onToggle={[Function]}
        parentRef={null}
      >
        <button
          aria-expanded={false}
          className="pf-c-dropdown__toggle"
          id="Dropdown Toggle"
          onClick={[Function]}
          type="button"
        >
          Dropdown
          <CaretDownIcon
            className="pf-c-dropdown__toggle-icon"
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              className="pf-c-dropdown__toggle-icon"
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                transform=""
              />
            </svg>
          </CaretDownIcon>
        </button>
      </DropdownToggle>
    </DropdownToggle>
  </div>
</Dropdown>
`;

exports[`dropdown dropup 1`] = `
.pf-c-dropdown__toggle-icon {
  display: block;
}
.pf-c-dropdown__toggle-icon {
  display: block;
}
.pf-c-dropdown__toggle {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  min-width: 44px;
  max-width: 100%;
  padding: 0.375rem 0.5rem 0.375rem 0.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  background-color: transparent;
}
.pf-c-dropdown.pf-m-top {
  display: inline-block;
  position: relative;
  max-width: 100%;
}

<Dropdown
  className=""
  direction="up"
  dropdownItems={
    Array [
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Action
      </DropdownItem>,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Action
      </DropdownItem>,
      <Separator
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
      />,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Action
      </DropdownItem>,
    ]
  }
  isOpen={false}
  isPlain={false}
  onSelect={[Function]}
  position="left"
  toggle={
    <DropdownToggle
      className=""
      iconComponent={[Function]}
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      onToggle={[Function]}
      parentRef={null}
    >
      Dropdown
    </DropdownToggle>
  }
>
  <div
    className="pf-c-dropdown pf-m-top"
  >
    <DropdownToggle
      className=""
      iconComponent={[Function]}
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      key=".0"
      onToggle={[Function]}
      parentRef={null}
    >
      <DropdownToggle
        className=""
        id="Dropdown Toggle"
        isActive={false}
        isFocused={false}
        isHovered={false}
        isOpen={false}
        isPlain={false}
        onToggle={[Function]}
        parentRef={null}
      >
        <button
          aria-expanded={false}
          className="pf-c-dropdown__toggle"
          id="Dropdown Toggle"
          onClick={[Function]}
          type="button"
        >
          Dropdown
          <CaretDownIcon
            className="pf-c-dropdown__toggle-icon"
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              className="pf-c-dropdown__toggle-icon"
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                transform=""
              />
            </svg>
          </CaretDownIcon>
        </button>
      </DropdownToggle>
    </DropdownToggle>
  </div>
</Dropdown>
`;

exports[`dropdown expanded 1`] = `
.pf-c-dropdown__toggle-icon {
  display: block;
}
.pf-c-dropdown__toggle-icon {
  display: block;
}
.pf-c-dropdown__toggle {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  min-width: 44px;
  max-width: 100%;
  padding: 0.375rem 0.5rem 0.375rem 0.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  background-color: transparent;
}
.pf-m-disabled {
  display: block;
}
.pf-m-disabled {
  display: block;
}
.pf-c-dropdown__separator {
  display: block;
  height: 1px;
  background-color: #ededed;
}
.pf-c-dropdown__separator {
  display: block;
  height: 1px;
  background-color: #ededed;
}
.pf-c-dropdown__menu {
  display: block;
  position: absolute;
  z-index: 100;
  min-width: 100%;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background: #ffffff;
  background-clip: padding-box;
  border: 1px solid transparent;
  box-shadow: 0 0.0625rem 0.0625rem 0rem rgba(3, 3, 3, 0.05), 0 0.25rem 0.5rem 0.25rem rgba(3, 3, 3, 0.06);
}
.pf-c-dropdown.pf-m-expanded {
  display: inline-block;
  position: relative;
  max-width: 100%;
}

<Dropdown
  className=""
  direction="down"
  dropdownItems={
    Array [
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Action
      </DropdownItem>,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Action
      </DropdownItem>,
      <Separator
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
      />,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Action
      </DropdownItem>,
    ]
  }
  isOpen={true}
  isPlain={false}
  onSelect={[Function]}
  position="left"
  toggle={
    <DropdownToggle
      className=""
      iconComponent={[Function]}
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      onToggle={[Function]}
      parentRef={null}
    >
      Dropdown
    </DropdownToggle>
  }
>
  <div
    className="pf-c-dropdown pf-m-expanded"
  >
    <DropdownToggle
      className=""
      iconComponent={[Function]}
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={true}
      isPlain={false}
      key=".0"
      onToggle={[Function]}
      parentRef={null}
    >
      <DropdownToggle
        className=""
        id="Dropdown Toggle"
        isActive={false}
        isFocused={false}
        isHovered={false}
        isOpen={true}
        isPlain={false}
        onToggle={[Function]}
        parentRef={null}
      >
        <button
          aria-expanded={true}
          className="pf-c-dropdown__toggle"
          id="Dropdown Toggle"
          onClick={[Function]}
          type="button"
        >
          Dropdown
          <CaretDownIcon
            className="pf-c-dropdown__toggle-icon"
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              className="pf-c-dropdown__toggle-icon"
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                transform=""
              />
            </svg>
          </CaretDownIcon>
        </button>
      </DropdownToggle>
    </DropdownToggle>
    <DropdownMenu
      aria-labelledby="Dropdown Toggle"
      className=""
      component="ul"
      isOpen={true}
      position="left"
    >
      <FocusTrap
        _createFocusTrap={[Function]}
        active={true}
        focusTrapOptions={
          Object {
            "clickOutsideDeactivates": true,
          }
        }
        paused={false}
        tag="div"
      >
        <div>
          <ul
            aria-labelledby="Dropdown Toggle"
            className="pf-c-dropdown__menu"
            hidden={false}
          >
            <DropdownItem
              className=""
              component="a"
              href="#"
              isDisabled={false}
              isHovered={false}
              key="link"
              onClick={[Function]}
            >
              <li>
                <a
                  aria-disabled={false}
                  className=""
                  href="#"
                  onClick={[Function]}
                >
                  Link
                </a>
              </li>
            </DropdownItem>
            <DropdownItem
              className=""
              component="button"
              href="#"
              isDisabled={false}
              isHovered={false}
              key="action"
              onClick={[Function]}
            >
              <li>
                <button
                  className=""
                  disabled={false}
                  href="#"
                  onClick={[Function]}
                >
                  Action
                </button>
              </li>
            </DropdownItem>
            <DropdownItem
              className=""
              component="a"
              href="#"
              isDisabled={true}
              isHovered={false}
              key="disabled link"
              onClick={[Function]}
            >
              <li>
                <a
                  aria-disabled={true}
                  className="pf-m-disabled"
                  href="#"
                  onClick={[Function]}
                  tabIndex={-1}
                >
                  Disabled Link
                </a>
              </li>
            </DropdownItem>
            <DropdownItem
              className=""
              component="button"
              href="#"
              isDisabled={true}
              isHovered={false}
              key="disabled action"
              onClick={[Function]}
            >
              <li>
                <button
                  className="pf-m-disabled"
                  disabled={true}
                  href="#"
                  onClick={[Function]}
                >
                  Disabled Action
                </button>
              </li>
            </DropdownItem>
            <Separator
              className=""
              component="a"
              href="#"
              isDisabled={false}
              isHovered={false}
              key="separator"
            >
              <DropdownItem
                className="pf-c-dropdown__separator"
                component="div"
                href="#"
                isDisabled={false}
                isHovered={false}
                onClick={[Function]}
                role="separator"
              >
                <li>
                  <div
                    className="pf-c-dropdown__separator"
                    href="#"
                    onClick={[Function]}
                    role="separator"
                  />
                </li>
              </DropdownItem>
            </Separator>
            <DropdownItem
              className=""
              component="a"
              href="#"
              isDisabled={false}
              isHovered={false}
              key="separated link"
              onClick={[Function]}
            >
              <li>
                <a
                  aria-disabled={false}
                  className=""
                  href="#"
                  onClick={[Function]}
                >
                  Separated Link
                </a>
              </li>
            </DropdownItem>
            <DropdownItem
              className=""
              component="button"
              href="#"
              isDisabled={false}
              isHovered={false}
              key="separated action"
              onClick={[Function]}
            >
              <li>
                <button
                  className=""
                  disabled={false}
                  href="#"
                  onClick={[Function]}
                >
                  Separated Action
                </button>
              </li>
            </DropdownItem>
          </ul>
        </div>
      </FocusTrap>
    </DropdownMenu>
  </div>
</Dropdown>
`;

exports[`dropdown regular 1`] = `
.pf-c-dropdown__toggle-icon {
  display: block;
}
.pf-c-dropdown__toggle-icon {
  display: block;
}
.pf-c-dropdown__toggle {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  min-width: 44px;
  max-width: 100%;
  padding: 0.375rem 0.5rem 0.375rem 0.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  background-color: transparent;
}
.pf-c-dropdown {
  display: inline-block;
  position: relative;
  max-width: 100%;
}

<Dropdown
  className=""
  direction="down"
  dropdownItems={
    Array [
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Action
      </DropdownItem>,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Action
      </DropdownItem>,
      <Separator
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
      />,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Action
      </DropdownItem>,
    ]
  }
  isOpen={false}
  isPlain={false}
  onSelect={[Function]}
  position="left"
  toggle={
    <DropdownToggle
      className=""
      iconComponent={[Function]}
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      onToggle={[Function]}
      parentRef={null}
    >
      Dropdown
    </DropdownToggle>
  }
>
  <div
    className="pf-c-dropdown"
  >
    <DropdownToggle
      className=""
      iconComponent={[Function]}
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      key=".0"
      onToggle={[Function]}
      parentRef={null}
    >
      <DropdownToggle
        className=""
        id="Dropdown Toggle"
        isActive={false}
        isFocused={false}
        isHovered={false}
        isOpen={false}
        isPlain={false}
        onToggle={[Function]}
        parentRef={null}
      >
        <button
          aria-expanded={false}
          className="pf-c-dropdown__toggle"
          id="Dropdown Toggle"
          onClick={[Function]}
          type="button"
        >
          Dropdown
          <CaretDownIcon
            className="pf-c-dropdown__toggle-icon"
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              className="pf-c-dropdown__toggle-icon"
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                transform=""
              />
            </svg>
          </CaretDownIcon>
        </button>
      </DropdownToggle>
    </DropdownToggle>
  </div>
</Dropdown>
`;

exports[`dropdown right aligned 1`] = `
.pf-c-dropdown__toggle-icon {
  display: block;
}
.pf-c-dropdown__toggle-icon {
  display: block;
}
.pf-c-dropdown__toggle {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  min-width: 44px;
  max-width: 100%;
  padding: 0.375rem 0.5rem 0.375rem 0.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  background-color: transparent;
}
.pf-c-dropdown {
  display: inline-block;
  position: relative;
  max-width: 100%;
}

<Dropdown
  className=""
  direction="down"
  dropdownItems={
    Array [
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Action
      </DropdownItem>,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={true}
        isHovered={false}
        onClick={[Function]}
      >
        Disabled Action
      </DropdownItem>,
      <Separator
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
      />,
      <DropdownItem
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href="#"
        isDisabled={false}
        isHovered={false}
        onClick={[Function]}
      >
        Separated Action
      </DropdownItem>,
    ]
  }
  isOpen={false}
  isPlain={false}
  onSelect={[Function]}
  position="right"
  toggle={
    <DropdownToggle
      className=""
      iconComponent={[Function]}
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      onToggle={[Function]}
      parentRef={null}
    >
      Dropdown
    </DropdownToggle>
  }
>
  <div
    className="pf-c-dropdown"
  >
    <DropdownToggle
      className=""
      iconComponent={[Function]}
      id="Dropdown Toggle"
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      key=".0"
      onToggle={[Function]}
      parentRef={null}
    >
      <DropdownToggle
        className=""
        id="Dropdown Toggle"
        isActive={false}
        isFocused={false}
        isHovered={false}
        isOpen={false}
        isPlain={false}
        onToggle={[Function]}
        parentRef={null}
      >
        <button
          aria-expanded={false}
          className="pf-c-dropdown__toggle"
          id="Dropdown Toggle"
          onClick={[Function]}
          type="button"
        >
          Dropdown
          <CaretDownIcon
            className="pf-c-dropdown__toggle-icon"
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              className="pf-c-dropdown__toggle-icon"
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                transform=""
              />
            </svg>
          </CaretDownIcon>
        </button>
      </DropdownToggle>
    </DropdownToggle>
  </div>
</Dropdown>
`;
